--- a/TalentLmsApi/app/src/main/AndroidManifest.xml
+++ b/TalentLmsApi/app/src/main/AndroidManifest.xml
@@ -22,17 +22,19 @@
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.abba.talentlmsapi.Views.MainActivity" />
+                android:value="com.abba.talentlmsapi.Views.DetailUser" />
 
         </activity>
         <activity
             android:name=".Views.SplashActivity"
             android:theme="@style/SplashTheme">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name=".Views.LoginActivity"></activity>
         <activity
@@ -40,7 +42,11 @@
            >
 
         </activity>
-        <activity android:name=".Views.MainActivity" />
+        <activity android:name=".Views.MainActivity" >
+
+
+
+        </activity>
     </application>
 
 </manifest>
